[package]
name = "llvm_sighandler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib", "staticlib"]

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.57"
cc = { version = "1.0", features = ["parallel"] }
glob = "0.3.1"
